--- a/src/dsi-toolkit.csproj
+++ b/src/dsi-toolkit.csproj
@@ -264,6 +264,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\WidthInputWindow.resx">
       <DependentUpon>WidthInputWindow.cs</DependentUpon>
