--- a/src/packages.config
+++ b/src/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.NetCore.Analyzers" version="3.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.NetFramework.Analyzers" version="3.0.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net48" />
   <package id="Serilog" version="2.9.0" targetFramework="net48" />
